k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: letsencrypt-svc
spec:
  selector:
    app: letsencrypt
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: NodePort
