k8s/k8s-init-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: ${NAMESPACE}
  name: letsencypt-ing
  annotations:
      kubernetes.io/ingress.global-static-ip-name: "${STATIC_IP_NAME}"
spec:
  rules:
  - http:
      paths:
      - path: /.well-known/*
        backend:
          serviceName: letsencrypt-svc
          servicePort: 80
